// Copyright 2020 Google LLC

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//     https://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package gastranslator;

message BMP280Reading {
    optional float temperature = 1;
    optional float pressure = 2;
}

message SCD30Reading {
    optional float temperature = 1;
    optional float humidity = 2;
    optional float co2 = 3;
}

message SGP30Reading {
    optional uint32 co2 = 1;
    optional uint32 tvoc = 2;
    optional uint32 baseline_co2 = 3;
    optional uint32 baseline_tvoc = 4;
    optional uint32 h2 = 5;
    optional uint32 ethanol = 6;
}

message SMUART04LReading {
  optional uint32 pm10_smoke = 1;
  optional uint32 pm25_smoke = 2;
  optional uint32 pm100_smoke = 3;
  optional uint32 pm10_env = 4;
  optional uint32 pm25_env = 5;
  optional uint32 pm100_env = 6;
}

message SensorUpdate {
    optional uint64 timestamp = 1;
    optional BMP280Reading bmp280 = 2;
    optional SCD30Reading scd30 = 3;
    optional SGP30Reading sgp30 = 4;
    optional SMUART04LReading smuart04l = 5;
}
